--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 anyhow = "1.0.71"
 dotenvy = "0.15.7"
 exitcode = "1.1.2"
+semver = { version = "1.0.17", features = ["serde"] }
 serde = { version = "1.0.171", features = ["derive"] }
 serde_json = "1.0.102"
 serde_yaml = "0.9.22"
