--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,11 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.71"
+clap = { version = "4.3.12", features = ["derive", "env"] }
 dotenvy = "0.15.7"
 exitcode = "1.1.2"
 indoc = "2.0.2"
+pathdiff = "0.2.1"
 semver = { version = "1.0.17", features = ["serde"] }
 serde = { version = "1.0.171", features = ["derive"] }
 serde_json = "1.0.102"
