--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,13 @@ serde = { version = "1.0.171", features = ["derive"] }
 serde_json = "1.0.102"
 serde_yaml = "0.9.22"
 thiserror = "1.0.43"
+
+[profile.release]
+strip = "debuginfo"
+opt-level = "z"
+lto = "thin"
+
+[profile.release-lto]
+inherits = "release"
+strip = true
+lto = "fat"
