--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.72"
 clap = { version = "4.3.14", features = ["derive", "env"] }
+dirs = "5.0.1"
 dotenvy = "0.15.7"
 exitcode = "1.1.2"
 indoc = "2.0.3"
