--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ clap = { version = "4.3.14", features = ["derive", "env"] }
 dotenvy = "0.15.7"
 exitcode = "1.1.2"
 indoc = "2.0.3"
+just-a-tag = { version = "0.1.1", features = ["serde"] }
 lazy_static = "1.4.0"
 pathdiff = "0.2.1"
 semver = { version = "1.0.18", features = ["serde"] }
