--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ indoc = "2.0.3"
 just-a-tag = { version = "0.1.1", features = ["serde"] }
 lazy_static = "1.4.0"
 pathdiff = "0.2.1"
+same-file = "1.0.6"
 semver = { version = "1.0.18", features = ["serde"] }
 serde = { version = "1.0.171", features = ["derive"] }
 serde_json = "1.0.103"
