Use which crate to find kubectl binary
(cherry picked from commit 2f62721ba4491b15dc0300f258e16d44ab74c921)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ serde = { version = "1.0.174", features = ["derive"] }
 serde_json = "1.0.103"
 serde_yaml = "0.9.25"
 thiserror = "1.0.44"
+which = "4.4.0"
 
 [profile.release]
 strip = "debuginfo"
