--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ semver = { version = "1.0.20", features = ["serde"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 serde_yaml = "0.9.29"
+socket2 = "0.5.5"
 thiserror = "1.0.52"
 which = "4.4.2"
 
